--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
