--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.4",
+    "node": "13.13.0"
+  },
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
